refactor: fetchDividend 메서드 추출